--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
-
 {
-  "include": ["src"],
+  "include": ["src", "src/lib/.ts"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
