--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: test-action
-        uses: ./action.yaml
+        uses: ./
         with:
           phrase: 'docs'
           github-token: ${{ secrets.GITHUB_TOKEN }}
