--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,8 +6,9 @@ jobs:
     name: A job to say hello
     steps:
       - uses: actions/checkout@v2
-      - name: test-action
-        uses: ./
+      - name: skip-workflow
+        uses: .
         with:
-          phrase: 'docs'
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: test command
+        run: yarn test
