--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: skip-workflow
-        uses: .
+        uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: test command
