--- a/.github/workflows/checkWorkflow.yaml
+++ b/.github/workflows/checkWorkflow.yaml
@@ -1,7 +1,9 @@
+on: [workflow_dispatch]
+
 jobs:
   test-action:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
       - name: test command
-        run: echo checked workflow
+        run: yarn test
