--- a/.github/workflows/checkWorkflow.yaml
+++ b/.github/workflows/checkWorkflow.yaml
@@ -3,7 +3,7 @@ on: [workflow_dispatch]
 jobs:
   test-action:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: slkdfjslkdjf
     steps:
       - name: test command
         run: yarn test
