--- a/action.yaml
+++ b/action.yaml
@@ -9,6 +9,9 @@ inputs:
   github-token:
     description: Github Token
     required: true
+  repo-token:
+    description: Github repo token
+    required: true
 runs:
   using: 'node12'
   main: 'dist/main.js'
