fix: docs workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,5 +10,6 @@ jobs:
         uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{secrets.REPO_TOKEN}}
       - name: test command
         run: yarn test
