fix: docs workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,12 +4,13 @@ jobs:
   test-action:
     runs-on: ubuntu-latest
     name: A job to say hello
+    if: 'true'
     steps:
       - uses: actions/checkout@v2
       - name: skip-workflow
         uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          repo-token: ${{secrets.REPO_TOKEN}}
+          repo-token: ${{ secrets.REPO_TOKEN }}
       - name: test command
         run: yarn test
