fix: docs workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,3 +14,15 @@ jobs:
           repo-token: ${{ secrets.REPO_TOKEN }}
       - name: test command
         run: yarn test
+  another-test-action:
+    runs-on: ubuntu-latest
+    name: another job
+    steps:
+      - uses: actions/checkout@v2
+      - name: skip-workflow
+        uses: ./
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.REPO_TOKEN }}
+      - name: test command
+        run: yarn test
