--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,5 +11,5 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: test command
-        if: ${{ !steps.skip-workflow.outputs.match }}
+        if: ${{ steps.skip-workflow.outputs.match }}
         run: yarn test
