--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: test command
-        if: ${{ steps }}
+        if: ${{ steps.skip-workflow.outputs }}
         run: yarn test
       - name: test command 2
         if: ${{ steps.skip-workflow.outputs.match }}
