--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,8 +12,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: test command
-        if: ${{ steps.skip-workflow.outputs.match }}
+        if: ${{ !steps.skip-workflow.outputs.match }}
         run: yarn test
       - name: test command 2
-        if: ${{ steps.skip-workflow.outputs.match }}
         run: yarn test
