--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,11 @@
 on: [pull_request]
 
 jobs:
-  test-action:
+  check-commit:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: check commit
+    outputs:
+      match: ${{ steps.skip-workflow.outputs.match }}
     steps:
       - uses: actions/checkout@v2
       - name: skip-workflow
@@ -11,8 +13,14 @@ jobs:
         uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  test-action:
+    needs: check-commit
+    if: ${{ needs.check-commit.outputs.match }}
+    runs-on: ubuntu-latest
+    name: A job to say hello
+    steps:
       - name: test command
-        if: ${{ !steps.skip-workflow.outputs.match }}
         run: yarn test
       - name: test command 2
         run: yarn test
