--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          repo-token: ${{ secret.REPO_TOKEN }}
+          repo-token: ${{ secrets.REPO_TOKEN }}
 
   test-action:
     needs: check-commit
