fix: docs workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     name: check commit
     outputs:
-      match: ${{ steps.skip-workflow.outputs.match }}
+      skip-job: ${{ steps.skip-workflow.outputs.skip-job }}
     steps:
       - uses: actions/checkout@v2
       - name: skip-workflow
@@ -16,7 +16,7 @@ jobs:
 
   test-action:
     needs: check-commit
-    if: ${{ !needs.check-commit.outputs.match }}
+    if: needs.check-commit.outputs.skip-job
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
