--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
 
   test-action:
     needs: check-commit
-    if: needs.check-commit.outputs.skip-job
+    if: ${{ !needs.check-commit.outputs.skip-job }}
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
