--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,3 +24,13 @@ jobs:
         run: yarn test
       - name: test command 2
         run: yarn test
+  test-action2:
+    needs: check-commit
+    if: ${{ !needs.check-commit.outputs.skip-job }}
+    runs-on: ubuntu-latest
+    name: A job to say hello
+    steps:
+      - name: test command
+        run: yarn test
+      - name: test command 2
+        run: yarn test
